devops/azure/chart/templates/azure-istio-auth-policy.yaml
#  Copyright © Microsoft Corporation
#
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.

apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: file-jwt-authz
  namespace: osdu
spec:
  selector:
    matchLabels:
      app: file
  action: DENY
  rules:
    - from:
        - source:
            notRequestPrincipals: ["*"]
      to:
        - operation:
            notPaths: ["/","*/index.html",
                       "*/readiness_check",
                       "*/api-docs",
                       "*/swagger","*/swagger-resources","*/swagger-ui.html",
                       "*/actuator/health",
                       "*/configuration/ui","*/configuration/security",
                       "/api/file/swagger-resources/*",
                       "/api/file/webjars/*",
                       "/api/file/v2/info"]
